[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wsjtx_codec"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["wsjtx_codec"]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

