[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wsjtx_codec"
version = "0.1.0"
description = "Pure-Python decoder for the WSJT-X UDP protocol"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["wsjtx_codec"]

[tool.hatch.build.targets.sdist]
exclude = [
    "venv",
    ".venv/",
    "dist/",
    "*.egg-info/",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "build",
    "twine",
]

